--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demo</title>
     <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background: black;
-        overflow: hidden;
-      }
+       body {
+          background-color: #73c8a9;
+          font-family: "Press Start 2P", cursive;
+          /* background-image: linear-gradient(to right, #72c89a, #373b44); */
+        }
 
       #game {
         margin: 0;
