--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,16 @@
     <title>Demo</title>
     <style>
        body {
-          background-color: #73c8a9;
-          font-family: "Press Start 2P", cursive;
-          /* background-image: linear-gradient(to right, #72c89a, #373b44); */
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
         }
 
       #game {
         margin: 0;
         padding: 0;
         background: black;
+        overflow: hidden;
       }
     </style>
   </head>
