--- a/index.html
+++ b/index.html
@@ -4370,7 +4370,6 @@ var __async = (__this, __arguments, generator) => {
 
 
 
-
 class Game {
   static init() {
     this.app = new pixi_js__WEBPACK_IMPORTED_MODULE_0__.Application({
@@ -5419,7 +5418,7 @@ class PipeBottom extends pixi_js__WEBPACK_IMPORTED_MODULE_0__.Sprite {
   }
   _initHealth() {
     this.style = new pixi_js__WEBPACK_IMPORTED_MODULE_0__.TextStyle({
-      fontFamily: "Futura",
+      fontFamily: "Times New Roman",
       fontSize: 22,
       fill: "black"
     });
@@ -19212,6 +19211,85 @@ _pixi_extensions__WEBPACK_IMPORTED_MODULE_0__.extensions.add(ProjectionSystem);
 
 /***/ }),
 
+/***/ "./node_modules/@pixi/core/lib/render/ObjectRendererSystem.mjs":
+/*!*********************************************************************!*\
+  !*** ./node_modules/@pixi/core/lib/render/ObjectRendererSystem.mjs ***!
+  \*********************************************************************/
+/***/ ((__unused_webpack___webpack_module__, __webpack_exports__, __webpack_require__) => {
+
+"use strict";
+__webpack_require__.r(__webpack_exports__);
+/* harmony export */ __webpack_require__.d(__webpack_exports__, {
+/* harmony export */   ObjectRendererSystem: () => (/* binding */ ObjectRendererSystem)
+/* harmony export */ });
+/* harmony import */ var _pixi_extensions__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! @pixi/extensions */ "./node_modules/@pixi/extensions/lib/index.mjs");
+
+
+class ObjectRendererSystem {
+  constructor(renderer) {
+    this.renderer = renderer;
+  }
+  render(displayObject, options) {
+    const renderer = this.renderer;
+    let renderTexture;
+    let clear;
+    let transform;
+    let skipUpdateTransform;
+    if (options) {
+      renderTexture = options.renderTexture;
+      clear = options.clear;
+      transform = options.transform;
+      skipUpdateTransform = options.skipUpdateTransform;
+    }
+    this.renderingToScreen = !renderTexture;
+    renderer.runners.prerender.emit();
+    renderer.emit("prerender");
+    renderer.projection.transform = transform;
+    if (renderer.context.isLost) {
+      return;
+    }
+    if (!renderTexture) {
+      this.lastObjectRendered = displayObject;
+    }
+    if (!skipUpdateTransform) {
+      const cacheParent = displayObject.enableTempParent();
+      displayObject.updateTransform();
+      displayObject.disableTempParent(cacheParent);
+    }
+    renderer.renderTexture.bind(renderTexture);
+    renderer.batch.currentRenderer.start();
+    if (clear ?? renderer.background.clearBeforeRender) {
+      renderer.renderTexture.clear();
+    }
+    displayObject.render(renderer);
+    renderer.batch.currentRenderer.flush();
+    if (renderTexture) {
+      if (options.blit) {
+        renderer.framebuffer.blit();
+      }
+      renderTexture.baseTexture.update();
+    }
+    renderer.runners.postrender.emit();
+    renderer.projection.transform = null;
+    renderer.emit("postrender");
+  }
+  destroy() {
+    this.renderer = null;
+    this.lastObjectRendered = null;
+  }
+}
+ObjectRendererSystem.extension = {
+  type: _pixi_extensions__WEBPACK_IMPORTED_MODULE_0__.ExtensionType.RendererSystem,
+  name: "objectRenderer"
+};
+_pixi_extensions__WEBPACK_IMPORTED_MODULE_0__.extensions.add(ObjectRendererSystem);
+
+
+//# sourceMappingURL=ObjectRendererSystem.mjs.map
+
+
+/***/ }),
+
 /***/ "./node_modules/@pixi/core/lib/renderTexture/BaseRenderTexture.mjs":
 /*!*************************************************************************!*\
   !*** ./node_modules/@pixi/core/lib/renderTexture/BaseRenderTexture.mjs ***!
@@ -19660,85 +19738,6 @@ _pixi_extensions__WEBPACK_IMPORTED_MODULE_1__.extensions.add(RenderTextureSystem
 
 
 //# sourceMappingURL=RenderTextureSystem.mjs.map
-
-
-/***/ }),
-
-/***/ "./node_modules/@pixi/core/lib/render/ObjectRendererSystem.mjs":
-/*!*********************************************************************!*\
-  !*** ./node_modules/@pixi/core/lib/render/ObjectRendererSystem.mjs ***!
-  \*********************************************************************/
-/***/ ((__unused_webpack___webpack_module__, __webpack_exports__, __webpack_require__) => {
-
-"use strict";
-__webpack_require__.r(__webpack_exports__);
-/* harmony export */ __webpack_require__.d(__webpack_exports__, {
-/* harmony export */   ObjectRendererSystem: () => (/* binding */ ObjectRendererSystem)
-/* harmony export */ });
-/* harmony import */ var _pixi_extensions__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! @pixi/extensions */ "./node_modules/@pixi/extensions/lib/index.mjs");
-
-
-class ObjectRendererSystem {
-  constructor(renderer) {
-    this.renderer = renderer;
-  }
-  render(displayObject, options) {
-    const renderer = this.renderer;
-    let renderTexture;
-    let clear;
-    let transform;
-    let skipUpdateTransform;
-    if (options) {
-      renderTexture = options.renderTexture;
-      clear = options.clear;
-      transform = options.transform;
-      skipUpdateTransform = options.skipUpdateTransform;
-    }
-    this.renderingToScreen = !renderTexture;
-    renderer.runners.prerender.emit();
-    renderer.emit("prerender");
-    renderer.projection.transform = transform;
-    if (renderer.context.isLost) {
-      return;
-    }
-    if (!renderTexture) {
-      this.lastObjectRendered = displayObject;
-    }
-    if (!skipUpdateTransform) {
-      const cacheParent = displayObject.enableTempParent();
-      displayObject.updateTransform();
-      displayObject.disableTempParent(cacheParent);
-    }
-    renderer.renderTexture.bind(renderTexture);
-    renderer.batch.currentRenderer.start();
-    if (clear ?? renderer.background.clearBeforeRender) {
-      renderer.renderTexture.clear();
-    }
-    displayObject.render(renderer);
-    renderer.batch.currentRenderer.flush();
-    if (renderTexture) {
-      if (options.blit) {
-        renderer.framebuffer.blit();
-      }
-      renderTexture.baseTexture.update();
-    }
-    renderer.runners.postrender.emit();
-    renderer.projection.transform = null;
-    renderer.emit("postrender");
-  }
-  destroy() {
-    this.renderer = null;
-    this.lastObjectRendered = null;
-  }
-}
-ObjectRendererSystem.extension = {
-  type: _pixi_extensions__WEBPACK_IMPORTED_MODULE_0__.ExtensionType.RendererSystem,
-  name: "objectRenderer"
-};
-_pixi_extensions__WEBPACK_IMPORTED_MODULE_0__.extensions.add(ObjectRendererSystem);
-
-
-//# sourceMappingURL=ObjectRendererSystem.mjs.map
 
 
 /***/ }),
